# multi_uuv

./: CMakeLists.txt  package.xml  setup.py
config/: hippo_ros.yaml  uuv_list.yaml
launch/: attitude_leader.launch  attitude_mimic.launch  multi_uuv.launch  path_follower.launch  path_leader.launch  sim_leader_follower.launch  test.launch  vehicle_spawner.launch
msg/: AltControlDebug.msg  PoseId.msg  PoseIdArray.msg  PoseIdStamped.msg
nodes/: alt_controller  arm_vehicles  attitude_mimic.py  control_unifier  fake_vision  follower_node.py  leaderless_circle  pose_observer  roll_controller  set_offboard
scripts/: particle_sim.py  read_radio_status.py
src/multi_uuv/: __init__.py  leaderless_circle.py  pose_dict.py  simple_pid.py
srv/: SetValue.srv
